Closed
Bug 1890904
Opened 2 years ago
Closed 2 years ago
Perma [clang-trunk] /builds/worker/checkouts/gecko/js/src/gc/Memory.cpp:438:11: error: variable 'err' set but not used [-Werror,-Wunused-but-set-variable]
Categories
(Core :: JavaScript: GC, defect, P3)
Core
JavaScript: GC
Tracking
()
RESOLVED
FIXED
127 Branch
| Tracking | Status | |
|---|---|---|
| firefox127 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
References
Details
Attachments
(1 file)
clang trunk improved some warning, which now finds this new case:
[task 2024-04-10T22:29:04.455Z] /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-wasm32-wasi --target=wasm32-wasi -o Unified_cpp_js_src_gc1.o -c -I/builds/worker/workspace/obj-spider/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/checkouts/gecko/js/src/gc -I/builds/worker/workspace/obj-spider/js/src/gc -I/builds/worker/workspace/obj-spider/js/src -I/builds/worker/checkouts/gecko/js/src -I/builds/worker/workspace/obj-spider/dist/include -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-spider/js/src/js-confdefs.h -fno-sized-deallocation -fno-aligned-new -mthread-model single -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -O -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wenum-float-conversion -Wno-deprecated-anon-enum-enum-conversion -Wno-deprecated-enum-enum-conversion -Wno-deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-vla-cxx-extension -Wno-unknown-warning-option -Werror=format -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/Unified_cpp_js_src_gc1.o.pp Unified_cpp_js_src_gc1.cpp
[task 2024-04-10T22:29:04.455Z] In file included from Unified_cpp_js_src_gc1.cpp:47:
[task 2024-04-10T22:29:04.455Z] /builds/worker/checkouts/gecko/js/src/gc/Memory.cpp:438:11: error: variable 'err' set but not used [-Werror,-Wunused-but-set-variable]
[task 2024-04-10T22:29:04.455Z] 438 | if (int err = posix_memalign(®ion, alignment, length)) {
[task 2024-04-10T22:29:04.455Z] | ^
[task 2024-04-10T22:29:04.455Z] 1 error generated.
| Assignee | ||
Comment 1•2 years ago
|
||
There's also:
[task 2024-04-10T22:29:45.375Z] /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/sysroot-wasm32-wasi --target=wasm32-wasi -o Unified_cpp_js_src8.o -c -I/builds/worker/workspace/obj-spider/dist/system_wrappers -include /builds/worker/checkouts/gecko/config/gcc_hidden.h -DNDEBUG=1 -DTRIMMED=1 -DJS_CACHEIR_SPEW -DJS_STRUCTURED_SPEW -DEXPORT_JS_API -DMOZ_HAS_MOZGLUE -I/builds/worker/checkouts/gecko/js/src -I/builds/worker/workspace/obj-spider/js/src -I/builds/worker/workspace/obj-spider/dist/include -DMOZILLA_CLIENT -include /builds/worker/workspace/obj-spider/js/src/js-confdefs.h -fno-sized-deallocation -fno-aligned-new -mthread-model single -fPIC -fno-rtti -ffunction-sections -fdata-sections -fno-exceptions -fno-math-errno -O -fno-omit-frame-pointer -funwind-tables -Werror -Wall -Wbitfield-enum-conversion -Wempty-body -Wformat-type-confusion -Wignored-qualifiers -Wpointer-arith -Wshadow-field-in-constructor-modified -Wsign-compare -Wtautological-constant-in-range-compare -Wtype-limits -Wno-error=tautological-type-limit-compare -Wunreachable-code -Wunreachable-code-return -Wunused-but-set-parameter -Wno-invalid-offsetof -Wclass-varargs -Wempty-init-stmt -Wfloat-overflow-conversion -Wfloat-zero-conversion -Wloop-analysis -Wno-range-loop-analysis -Wenum-compare-conditional -Wenum-float-conversion -Wno-deprecated-anon-enum-enum-conversion -Wno-deprecated-enum-enum-conversion -Wno-deprecated-this-capture -Wcomma -Wimplicit-fallthrough -Wstring-conversion -Wno-inline-new-delete -Wno-error=deprecated-declarations -Wno-error=array-bounds -Wno-error=free-nonheap-object -Wno-error=atomic-alignment -Wno-error=deprecated-builtins -Wformat -Wformat-security -Wno-psabi -Wthread-safety -Wno-error=builtin-macro-redefined -Wno-vla-cxx-extension -Wno-unknown-warning-option -Werror=format -fstandalone-debug -fno-strict-aliasing -ffp-contract=off -MD -MP -MF .deps/Unified_cpp_js_src8.o.pp Unified_cpp_js_src8.cpp
[task 2024-04-10T22:29:45.375Z] In file included from Unified_cpp_js_src8.cpp:11:
[task 2024-04-10T22:29:45.376Z] /builds/worker/checkouts/gecko/js/src/vm/ArrayBufferObject.cpp:208:11: error: variable 'err' set but not used [-Werror,-Wunused-but-set-variable]
[task 2024-04-10T22:29:45.376Z] 208 | if (int err = posix_memalign(&data, gc::SystemPageSize(), mappedSize)) {
[task 2024-04-10T22:29:45.376Z] | ^
[task 2024-04-10T22:29:45.376Z] 1 error generated.
| Assignee | ||
Comment 2•2 years ago
|
||
Updated•2 years ago
|
Assignee: nobody → mh+mozilla
Status: NEW → ASSIGNED
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/12f3990bf74e
Mark results only used in debug builds as used. r=spidermonkey-reviewers,jandem
Updated•2 years ago
|
Severity: -- → S3
Priority: -- → P3
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
status-firefox127:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 127 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•