Bug 1890904 - Mark results only used in debug builds as used. r=spidermonkey-reviewers,jandem

Differential Revision: https://phabricator.services.mozilla.com/D207226